# dotfiles

./: .clang-format  .editorconfig  .gitignore  .luarc.json  .prettierrc.yaml  .rag.yaml  .remarkrc.json  .tsqueryrc.json  LICENSE.txt  Makefile  README.md  TODOnvimREMINDER.md  deps.rockspec  flsproject.fnl  pyproject.toml  pyrightconfig.json  requirements.txt  test
.config/ask-openai/: .gitignore
.config/bat/: config
.config/editrc/: .editrc
.config/fd/: ignore
.config/gdb/: .gdbinit
.config/ghostty/: config
.config/git/: ignore
.config/hammerspoon/: ask.sh  init.lua  run_unit_tests.fish
.config/iina/: TODO.md  export.fish  iina.plist  import.fish  test.plist
.config/inputrc/: .inputrc  NOTES.md
.config/nvim/: cheatsheet.md  coc-install.fish  coc-settings.json  disabled-nvim-tree-context-menu.lua  highlights.vim  init.lua  links.sh  mnemonics.md  setup.md  wilder.vim
.config/ripgrep/: ripgreprc
.config/tree-sitter/: config.json
.config/uv/: uv.toml
.config/vim/: .vimrc
.config/zed/: settings.json
.ctags.d/: base.ctags
.grc/: conf.docker_buildx_ls  conf.docker_compose_ls  conf.docker_compose_ps  conf.docker_volume_ls  conf.dockernetwork  conf.dockerps  conf.env_cmd  conf.exiftool_list  conf.ffprobe_packets  conf.ffprobe_packets_csv  conf.git_config_list  conf.gsed_debug  conf.kubectl  conf.kubectl_explain  conf.mdls  conf.ollama_list  conf.ollama_show  conf.override.dockerimages  conf.pgrep  conf.pip_list  grc.conf
.ipython/profile_default/: ipython_config.py  traceback-color.py
bash/: .bash_logout  .bash_profile  .bashrc  .gitignore  bashrc  course.bashrc.sh  fish_to_bash_aliases.fish  full.bashrc.sh  pared.abbrs.bash  pared.abbs.bash  pstreegrep.py  shared.bashrc.sh
bash/early/: funcs.bash  path-init.bash
bash/startup/: abbr.bash  abbrs.snippets.bash  bind-specific.bash  binds.bash  fish-abbr-func-ports.bash  fish-replicate.bash  funcs.bash  misc.abbrs.bash  (+4 more)
bat/: bat.conf
fish/: _ealias_abbr_adapter.fish  run-tests.fish
git/: git-commit-with-function-context  linux.gitconfig
install/: brews.fish  cargo.installs.fish  go.installs.fish  linux.fish  symlinks.fish
misc/: .gitignore
nix/: profiles.fish
test/: .gitignore  demo.sh  fib-1.sh  fib-3.sh  fib-4.sh  fib-5.sh  test.py
zsh/universals/3-last/ask-openai/rusts/: Cargo.toml  rustfmt.toml
zsh/universals/3-last/ask-openai/rusts/src/: main.rs
(+792 files in other folders)
