[project]
name = "dotfiles"
version = "0.1.0"
description = "A rug for all my dotfiles, configs, scripts, etc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.11",
    "httpx>=0.28.1",
    "ipython>=9.0.2",
    "iterm2>=2.9",
    "keyring>=25.6.0",
    "keyrings-cryptfile>=1.3.9",
    "neovim>=0.3.1",
    "openai>=1.58.1",
    "pyperclip>=1.9.0",
    "rich>=13.9.4",
    "rope>=1.13.0",
    "ruff>=0.11.8",
    "yapf>=0.43.0",
]
