[project]
name = "dotfiles"
version = "0.1.0"
description = "A rug for all my dotfiles, configs, scripts, etc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.11",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "iterm2>=2.9",
    "keyring>=25.6.0",
    "keyrings-cryptfile>=1.3.9",
    "neovim>=0.3.1",
    "openai>=1.58.1",
    "pynvim>=0.5.2",
    "pyperclip>=1.9.0",
    "rich>=13.9.4",
    "rope>=1.13.0",
    "ruff>=0.11.8",
    "tiktoken>=0.9.0",
    "transformers>=4.52.4",
    "typer>=0.15.3",
    "yapf>=0.43.0",
]

#
# [tool.ruff.format]
# quote-style = "single"

