[package]
name = "rusts"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # For HTTP requests
tokio = { version = "1", features = ["full"] }      # For async runtime
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization
dirs = "5.0"

